// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements Button renders a button correctly. 1`] = `
<styled.button
  disabled={false}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  type="button"
>
  test
</styled.button>
`;

exports[`Elements Button renders a button without child correctly 1`] = `
<styled.button
  disabled={false}
  type="button"
/>
`;

exports[`Elements Button renders a disabled button correctly and does not call onClick. 1`] = `
<styled.button
  disabled={true}
  type="button"
>
  test
</styled.button>
`;
